use string.formatted